--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <div class="footer module">
-    <span class="licence">Copyright 2015 &copy; Minimal-block.</span>
+    <span class="licence">Copyright 2016 &copy; Steven Bell.</span>
     <p>
         Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyllrb</a>.
-        The <a href="https://github.com/drvy/minimal-block" target="_blank">minimal-block theme.</a>
     </p>
 </div>
