--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
 
     {% if site.highlighter %} <link rel="stylesheet" href="{{ site.url }}/css/syntax.css" type='text/css'> {% endif %}
     <link rel="stylesheet" href="{{ site.url }}/css/main.css" type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,300,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans: 300, 400" rel="stylesheet" type="text/css">
 
 </head>
 
