--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="cleartype" content="on">
 
-    {% if site.highlighter %} <link rel="stylesheet" href="{{ site.url }}css/syntax.css" type='text/css'> {% endif %}
-    <link rel="stylesheet" href="{{ site.url }}css/main.css" type='text/css'>
+    {% if site.highlighter %} <link rel="stylesheet" href="{{ site.github.url }}/css/syntax.css" type='text/css'> {% endif %}
+    <link rel="stylesheet" href="{{ site.github.url }}css/main.css" type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,300,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans: 300, 400" rel="stylesheet" type="text/css">
 
@@ -52,7 +52,7 @@
         <div class="module title color-1">
             <h1><a href="{{ site.url }}/">articles</a></h1>
             {% for post in site.posts %}
-            <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+            <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ site.github.url }}/{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
             {% endfor %}
         </div>
 
