--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="cleartype" content="on">
 
-    {% if site.highlighter %} <link rel="stylesheet" href="devicurious/css/syntax.css" type='text/css'> {% endif %}
-    <link rel="stylesheet" href="devicurious/css/main.css" type='text/css'>
+    {% if site.highlighter %} <link rel="stylesheet" href="/css/syntax.css" type='text/css'> {% endif %}
+    <link rel="stylesheet" href="/css/main.css" type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:400,300,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans: 300, 400" rel="stylesheet" type="text/css">
 
