changed links in default.html to resolve 404 asset errors

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="footer module">
-    <span class="licence">Copyright 2016 &copy; Steven Bell.</span>
+    <span class="licence"><p>Copyright 2016 &copy; Steven Bell.</p></span>
     <p>
         Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyllrb</a>.
     </p>
