corrected bug where about contacts and home links were broken

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,9 @@
         </div>
 
         <nav class="module main-menu color-4">
-            <a href="{{ site.url }}/">Home</a>
-            <a href="{{ site.url }}/about/">About</a>
-            <a href="{{ site.url }}/contact/">Contact</a>
+            <a href="/">Home</a>
+            <a href="/about/">About</a>
+            <a href="/contact/">Contact</a>
         </nav>
 
         <div class="module links color-3">
