--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,9 +37,9 @@
         </div>
 
         <nav class="module main-menu color-4">
-            <a href="devicurious/">Home</a>
-            <a href="devicurious/about/">About</a>
-            <a href="devicurious/contact/">Contact</a>
+            <a href="/">Home</a>
+            <a href="{{ site.name }}/about">About</a>
+            <a href="{{ site.name }}/contact">Contact</a>
         </nav>
 
         <div class="module links color-3">
@@ -50,7 +50,7 @@
 
         <!-- roster of blog entries here! -->
         <div class="module title color-1">
-            <h1><a href="{{ site.url }}/">articles</a></h1>
+            <h1>articles</h1>
             {% for post in site.posts %}
         <li><p>{{ post.date | date_to_string }}</p> » <a href="/devicurious{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
             {% endfor %}
