corrected bug where about contacts and home links were broken

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
 
         <nav class="module main-menu color-4">
             <a href="/">Home</a>
-            <a href="{{ site.name }}/about">About</a>
-            <a href="{{ site.name }}/contact">Contact</a>
+            <a href="/about">About</a>
+            <a href="/contact">Contact</a>
         </nav>
 
         <div class="module links color-3">
