corrected bug where about contacts and home links were broken

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,8 @@
 
         <nav class="module main-menu color-4">
             <a href="/devicurious">Home</a>
-            <a href="devicurious/about">About</a>
-            <a href="devicurious/contact">Contact</a>
+            <a href="/devicurious/about">About</a>
+            <a href="/devicurious/contact">Contact</a>
         </nav>
 
         <div class="module links color-3">
