corrected bug where about contacts and home links were broken

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <header id="top" class="main-header">
 
         <div class="module title color-1">
-            <h1><a href="/">{{ site.name }}</a></h1>
+            <h1><a href="/devicurious">{{ site.name }}</a></h1>
         </div>
 
         <div class="module description color-2">
