--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,8 @@ h6 {
     font-weight: 400;
     font-size: 1em;
     color: darkgrey;
+    margin: 0;
+    line-height: 1.4em;
 }
 
 a {
@@ -122,13 +124,6 @@ li {
     font-size: 1em;
     line-height: 1.4;
  }
-
- @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    h6 {
-        font-size: .7em;
-    }
-}
 
 /* ------------------------------------------------------------------------
 -  The navigation. Main menu and article links. -
@@ -385,14 +380,31 @@ table {
 -  Make things responsive. -
 -------------------------------------------------------------------------*/
 
+articleListing
+ @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+
+}
+
+
 @media (max-width: 850px) {
 
-    body { font-size: large; }
+    body {
+        font-size: large;
+    }
+
+   h6 {
+        font-size: .7em;
+    }
 
     .main-header,
     .main-content {
         padding: 0.75em;
         width: 100%;
+    }
+
+    .main-content .module {
+
     }
 
     .main-header .module { margin-left: 0; }
