--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ h6 {
     font-weight: 400;
     font-size: 1em;
     color: darkgrey;
-    margin: 0;
+    margin: 0 0 0 2%;
     line-height: 1.4em;
 }
 
@@ -393,8 +393,17 @@ articleListing
         font-size: large;
     }
 
+    h1 {
+        font-size: 2em;
+    }
+
+    h4 {
+    font-size: 1.5em;
+    padding-left: 2%;
+    }
+
    h6 {
-        font-size: .7em;
+        font-size: .85em;
     }
 
     .main-header,
